--- a/level30/classwork/index.html
+++ b/level30/classwork/index.html
@@ -6,6 +6,6 @@
     <title>hello git</title>
 </head>
 <body>
-    <h1>hello git!</h1>
+    <h1 style="color: blue;">hello git!</h1>
 </body>
 </html>
